--- a/source/scss/schedules.scss
+++ b/source/scss/schedules.scss
@@ -126,7 +126,7 @@
 
 	}
 .schedules__next,.schedules__prev{
-			// height:100%;
+			height:100%;
 			padding: 0px 10px;
 			display: flex;
 			flex-flow:column nowrap;
@@ -150,8 +150,15 @@
 		display: none;
 	}
 	.schedules{
+		left:0%;
+		.accept{
+			margin-bottom: 5px;
+		}
+	
 		.schedules__header{
-
+			.schedules__close{
+				padding-right: 0px;
+			}
 			.schedules__period{
 				margin:0px 5px;
 			}
@@ -164,9 +171,19 @@
 			top:20vh;
 			left:10px;
 			bottom:auto;
+			.schedules__content-wrapper{
+
 			.schedules__content{
+				.schedules__next,.schedules__prev{
+					display: none;
+				}
+				margin:auto;
+				margin-top:20%;
 				display:flex;
 				flex-flow:column nowrap;
 			}
+
+			}
+		
 		}
 }
